<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut01.UT01_002">

    <Button
        android:id="@+id/bGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Boton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tGlobal"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAdd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bReset1"
        app:layout_constraintTop_toBottomOf="@+id/bGlobal" />

    <Button
        android:id="@+id/bAdd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bReset2"
        app:layout_constraintTop_toBottomOf="@+id/bAdd1" />

    <Button
        android:id="@+id/Boton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Boton44"
        app:layout_constraintTop_toBottomOf="@+id/bAdd2" />

    <Button
        android:id="@+id/Boton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Boton55"
        app:layout_constraintTop_toBottomOf="@+id/Boton4" />

    <TextView
        android:id="@+id/Text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Text4"
        app:layout_constraintEnd_toStartOf="@+id/Boton44"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tLocal2" />

    <TextView
        android:id="@+id/tLocal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Text2"
        app:layout_constraintEnd_toStartOf="@+id/bReset1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tGlobal" />

    <Button
        android:id="@+id/bReset1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton22"
        app:layout_constraintEnd_toStartOf="@+id/bAdd1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tLocal1"
        app:layout_constraintTop_toBottomOf="@+id/bGlobal" />

    <Button
        android:id="@+id/bReset2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton33"
        app:layout_constraintEnd_toStartOf="@+id/bAdd2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tLocal2"
        app:layout_constraintTop_toBottomOf="@+id/bReset1" />

    <Button
        android:id="@+id/Boton44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton44"
        app:layout_constraintEnd_toStartOf="@+id/Boton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Text4"
        app:layout_constraintTop_toBottomOf="@+id/bReset2" />

    <Button
        android:id="@+id/Boton55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Boton55"
        app:layout_constraintEnd_toStartOf="@+id/Boton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Text5"
        app:layout_constraintTop_toBottomOf="@+id/Boton44" />

    <TextView
        android:id="@+id/tLocal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Text3"
        app:layout_constraintEnd_toStartOf="@+id/bReset2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tLocal1" />

    <TextView
        android:id="@+id/tGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:text="@string/Text1"
        app:layout_constraintEnd_toStartOf="@+id/bGlobal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Text5"
        app:layout_constraintEnd_toStartOf="@+id/Boton55"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text4" />

</androidx.constraintlayout.widget.ConstraintLayout>